--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ end：枷锁</tw-passagedata><tw-passagedata pid="6" name="“你已经不相信
 
 她的声音甚至没有激烈的情感波动，却像一把无形的刀，刺入了你的心。
 
-你恍然发现，她的心似乎被这场宫廷的阴谋游戏彻底冰封，而你，只是她疲惫世界中的一部分。你们平静地对望，沉默得像一对最完美不过的情人雕塑。
+你恍然发现，她的心似乎被这场宫廷的阴谋游戏彻底冰封，而你，只是她疲惫世界中的一部分。你们平静地对望，沉默得像一对最完美不过的情人塑像。
 
 end：至亲至疏夫妻</tw-passagedata><tw-passagedata pid="7" name="质疑" tags="" position="775,600" size="100,100">&#39;&#39;“你不也一样在逃避吗？”&#39;&#39;
 
@@ -124,7 +124,7 @@ end：眼泪的重量
 
 “或许这就是我们的结局，”她低声说道，轻轻笑了笑，“一起沉沦，直到连月光都无法照亮我们。”
 
-在这场没有终点的游戏中，你们只能依靠彼此，沉沦在无尽的黑暗中，直到最后一刻。太好了，太好了。你情不自禁吻了她，你们将紧紧束缚在命运的网中，和世界上任何一对亲密无间的有情人一样，拥有永不分离的结局。
+你吻了她，在这场没有终点的游戏中，你们只能依靠彼此，沉沦在无尽的黑暗中，直到最后一刻。太好了，你几乎要欢呼出声。你们将被紧紧地束缚在命运的网中，和世界上任何一对亲密无间的有情人一样，拥有永不分离的结局。
 
 end：网</tw-passagedata><tw-passagedata pid="12" name="“你真的相信面对能改变什么吗？”" tags="" position="1150,600" size="100,100">“你真的相信面对能改变什么吗？”
 
